# lan-chat

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: main.rs  network.rs
ui/: main.slint
