[package]
name = "lan-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
local-ip-address = "0.6"

[build-dependencies]
slint-build = "1.3"

[profile.release]
opt-level = 3
lto = true
